--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <script src="script.js" defer></script>
 </head>
 <body>
-
+    <button>Clique em mim!</button>
+    <button>Clique em mim!</button>
+    <button>Clique em mim!</button>
 </body>
 </html>
